--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "element-ui": "^2.0.8",
+    "font-awesome-sass": "^4.7.0",
     "strip-bom": "^3.0.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
