--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "font-awesome-sass": "^4.7.0",
     "strip-bom": "^3.0.0",
     "vue": "^2.5.2",
+    "vue-resource": "^1.3.5",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
